<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/Cons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productconsumo" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/AlertDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alerta0" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/LeftGoLeft"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/Ligar" />

            <Button
                android:id="@+id/LeftGoRight"
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:text="@string/Desligar" />
        </TableRow>
    </TableLayout>

</RelativeLayout>