<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DigitalClock" />
   
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:background="#00001F"
            android:gravity="center"
            android:text="@string/row1"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000F"
            android:gravity="center"
            android:text="@string/row2"
            android:textColor="#FFFFFF" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableRow1"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/Consumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:gravity="center"
            android:text="@string/Consumo"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/UnlockProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center"
            android:text="@string/UnlockProgress"
            android:textSize="60sp" />

		<com.example.smarthouse.mainactivity.VerticalSeekBar
		    android:id="@+id/seekBar"
		    android:layout_width="wrap_content"
		    android:layout_height="200dp"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:layout_marginBottom="20dp"
		    android:layout_marginRight="23dp" />

    </RelativeLayout>

</RelativeLayout>